# coal_fluctu

./: CMakeLists.txt  coal_fluctu.cpp  coalescence_golovin.py  kompilacja.sh
